# parcelscan

./: Cargo.toml  Readme.md
src/: geo_util.rs  lib.rs  main.rs  polygon_wrapper.rs  sfassessormap.rs  sfbuidingfootprints.rs  sflanduse.rs  sfplanningacela.rs  sfzoningdistricts.rs  xlsxdeserialize.rs
