[package]
name = "parcelscan"
version = "0.1.0"
authors = ["Yonathan Randolph <yonathan@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.1"
csv = "1.1.3"
log = "0.4.8"
env_logger = "0.7.1"
geo = "0.13.0"
serde = "1.0.111"
serde_derive = "1.0.111"
wkt = "0.7.0"
num-traits = "0.2.11"
calamine = "0.16.1"

# requires proj4 library; brew install proj
proj = "0.16.2"
# version of geo-types needed to match the version used by proj, not the new one used by geo
# Fortunately, geo re-exposes its geo-types,
# and wkt has its own copy of the types (and optional dependency geo-types)
geo-types = "0.5.0"
rstar = "0.8.0"
conv = "0.3.3"
chrono = "0.4.11"
serde_json = "1.0.53"
ordered-float = "1.0.2"
geojson = "0.18.0"
rayon = "1.3.0"
thiserror = "1.0.19"
